correction des boutons menus pour chrome et opera => taille class leftCol et text-overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -397,6 +397,7 @@ footer {
   align-items: flex-start;
   padding: 10px 0 0 10px;
   width: 80%;
+  height: calc(100% - 10px);
   transition: width 0.3s ease-in-out; }
 
 .dish__title {
@@ -407,7 +408,7 @@ footer {
   text-align: start;
   white-space: nowrap;
   overflow: hidden;
-  text-overflow: '...'; }
+  text-overflow: ellipsis; }
 
 .dish__detail {
   margin: 0;
@@ -418,7 +419,7 @@ footer {
   text-align: start;
   white-space: nowrap;
   overflow: hidden;
-  text-overflow: '...'; }
+  text-overflow: ellipsis; }
 
 /****btn price layout******/
 .dish__price {
