--- a/sass/pages/_menu.scss
+++ b/sass/pages/_menu.scss
@@ -100,6 +100,7 @@
   align-items: flex-start;
   padding: 10px 0 0 10px;
   width: 80%;
+  height: calc(100% - 10px);
   transition: width 0.3s ease-in-out; //transition
 }
 
@@ -111,7 +112,7 @@
   text-align: start;
   white-space: nowrap;
   overflow: hidden;
-  text-overflow: '...';
+  text-overflow: ellipsis;
 }
 
 .dish__detail {
@@ -123,7 +124,7 @@
   text-align: start;
   white-space: nowrap;
   overflow: hidden;
-  text-overflow: '...';
+  text-overflow: ellipsis;
 }
 
 /****btn price layout******/
